--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,26 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wnderlust</title>
-</head>
-
-<body>
+<%- layout("/layouts/boilerplate") %>
     <h3>All Listings</h3>
-    <form method="get" action="/listings/new">
+    <!-- <form method="get" action="/listings/new">
         <button>Create New listing</button>
-    </form>
-    <ul>
+    </form> -->
+    <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 ">
         <% for(let listing of allListings){ %>
-            <li>
-               <a href="/listings/<%= listing._id %>"> <%= listing.title %></a>
-            </li>
-           <form method="post" action="listings/<%= listing._id %>?_method=delete"><button>delete</button></form>
+            <a class="listing-ref" href="/listings/<%= listing._id %>">
+                <div class="card col">
+                    <img class="card-img-top" style="height: 20rem;" src="<%= listing.image %>" alt="listing" />
+                <div class="card-img-overlay">
+                    
+                </div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            <b>
+                                <%= listing.title %>
+                            </b>
+                            <br>
+                            &#2547;<%= listing.price.toLocaleString("en-BN") %>/= per night
+                        </p>
+                    </div>
+                </div>
+            </a>
             <% } %>
-    </ul>
-   
-</body>
-
-</html>
+    </div>
