--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,31 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
-
-<body>
-
+<%- layout("/layouts/boilerplate") %>
+<div class="row">
+   <div class="col-8 offset-2">
+    <h3>Create A new list</h3>
     <form method="POST" action="/listings">
-        <h3>Create A new list</h3>
-        <input type="text" name="listing[title]" id="" placeholder="Enter Title"> <br> <br>
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+        <input type="text" name="listing[title]" id="" placeholder="Enter Title" class="form-control">
+        </div> 
+  
 
-        <textarea type="text" name="listing[description]" id="" placeholder="Enter description"></textarea> <br> <br>
+        <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea type="text" name="listing[description]" id="" placeholder="Enter description" class="form-control"></textarea> 
+        </div>
+       
 
-        <input type="text" name="listing[image]" id="" placeholder="Enter image URL"> <br> <br>
+        <div class="mb-3">
+            <label for="image" class="form-label">Image link</label>
+            <input type="text" name="listing[image]" id="" placeholder="Enter image URL" class="form-control"> 
+        </div>
 
-        <input type="number" name="listing[price]" id="" placeholder="Enter Price"> <br> <br>
+        <div class="row">
+            <div class="mb-3 col-md-4">
+                <label for="price" class="form-label">Price:</label>
+                <input type="number" name="listing[price]" id="" placeholder="Enter Price" class="form-control"> 
+            </div>
+            <div class="mb-3 col-md-8">
+                <label for="location" class="form-label">Location</label>
+                <input type="text" name="listing[location]" id="" placeholder="Enter Location" class="form-control">
+            </div>
+        </div>
 
-        <input type="text" name="listing[location]" id="" placeholder="Enter Location"> <br> <br>
 
-        <input type="text" name="listing[country]" id="" placeholder="Enter Country"> <br> <br>
+       <div class="mb-3">
+        <label for="country" class="form-label">Country</label>
+        <input type="text" name="listing[country]" id="" placeholder="Enter Country" class="form-control"> 
+       </div>
+     
 
-        <button>create listing</button>
+        <button class="btn btn-dark">create listing</button>
     </form>
-
-</body>
-
-</html>
+   </div>
+    </div>
