--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,27 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- layout("/layouts/boilerplate") %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
 
-<body>
-    <h3>Listing Details : </h3>
-    <ul>
-        <li> <%= listing.title %> </li>
-        <li> <%= listing.description %> </li>
-        <li>&#x09F3;<%= listing.price.toLocaleString("en-BD") %> </li>
-        <li> <%= listing.location %> </li>
-        <li> <%= listing.country %> </li>
-    </ul>
-    
-    <br>
-    <form method="get" action="/listings/<%= listing._id%>/edit">
-        <button>Edit this listing</button> 
-        <button><a href="/listings">Home</a></button>
-    </form>
-</body>
-
-</html>
+    <div class="row mt-4">
+        <div class="col-8 offset-2">
+            <h3>Listing Details : </h3>
+        </div>
+        <div class="card col-6 offset-2">
+            <div class="card">
+                <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing">
+                <div class="card-body">
+                    <p class="card-text">
+                        <b>
+                            <%= listing.title %>
+                        </b> <br>
+                        <%= listing.description %> <br>
+                            &#x09F3;<%= listing.price.toLocaleString("en-BD") %> <br>
+                                <%= listing.location %> <br>
+                                    <%= listing.country %> <br>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="show-btns offset-2">
+            <form method="get" action="/listings/<%= listing._id%>/edit">
+                <button class="btn btn-dark col-12 edit-btn">Edit</button>
+            </form>
+            <form method="post" action="/listings/<%= listing._id %>?_method=delete">
+                <button class="btn btn-dark offset-4">delete</button>
+            </form>
+        </div>
+    </div>
