--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,10 +71,9 @@ body{
 }
 
 /* Cards */
-.card{
+.listing-card {
     border: none !important;
     margin-bottom: 2rem;
-
 }
 
 .card-img-top{
@@ -121,6 +120,10 @@ body{
 }
 
 .show-btns{
-    display: flex;
-  
+    display: flex;  
+}
+
+.show-card{
+    padding-left: 0;
+    padding-right: 0;
 }
