--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,7 +6,7 @@
     <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 ">
         <% for(let listing of allListings){ %>
             <a class="listing-ref" href="/listings/<%= listing._id %>">
-                <div class="card col">
+                <div class="card col listing-card">
                     <img class="card-img-top" style="height: 20rem;" src="<%= listing.image %>" alt="listing" />
                 <div class="card-img-overlay">
                     
