--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,16 +3,16 @@
 
     <div class="row mt-4">
         <div class="col-8 offset-2">
-            <h3>Listing Details : </h3>
+            <h3>
+                <%= listing.title %>
+            </h3>
         </div>
-        <div class="card col-6 offset-2">
+        <div class="card col-6 offset-2 show-card listing-card">
             <div class="card">
                 <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing">
                 <div class="card-body">
                     <p class="card-text">
-                        <b>
-                            <%= listing.title %>
-                        </b> <br>
+                        <br>
                         <%= listing.description %> <br>
                             &#x09F3;<%= listing.price.toLocaleString("en-BD") %> <br>
                                 <i class="fa-solid fa-location-dot"></i>
@@ -31,5 +31,49 @@
             <form method="post" action="/listings/<%= listing._id %>?_method=delete">
                 <button class="btn btn-dark offset-3">delete</button>
             </form>
+        </div>
+
+        <div class="col-8 offset-2 mb-3">
+            <hr />
+            <h4>Leave a review</h4>
+            <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
+                <div class="mb-3 mt-3">
+                    <label for="rating" class="form-label">Rating</label>
+                    <input type="range" id="rating" min="1" max="5" name="review[rating]" class="form-range">
+                </div>
+                <div>
+                    <label for="comment" class="form-label">Comments</label>
+                    <textarea name="review[comment]" id="comment" cols="15" rows="5" class="form-control"
+                        required></textarea>
+                    <div class="invalid-feedback">
+                        Can't Empty!
+                    </div>
+                    <button class="btn btn-outline-dark mt-2">Submit</button>
+                </div>
+            </form>
+
+            <hr />
+
+            <p><b>All reviews</b></p>
+            <div class="row">
+                <% for(review of listing.reviews) { %>
+
+                    <div class="card col-5 ms-3 mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Jane Doe</h5>
+                            <p class="card-text">
+                                <%= review.comment %>
+                            </p>
+                            <p class="card-text">
+                                <%= review.rating %> stars
+                            </p>
+                            <form method="post" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-2">
+                                <button class="btn btn-dark">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                    <% } %>
+            </div>
+
         </div>
     </div>
