--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,7 +8,7 @@
             </h3>
         </div>
         <div class="card col-6 offset-2 show-card listing-card">
-            <div class="card">
+            <div class="card-shows">
                 <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing">
                 <div class="card-body">
                     <p class="card-text">
